Refine Spring Security to permit public API access for products/categories