@@ -4,8 +4,8 @@ package com.eshop.e_shop_backend.security;
 import com.eshop.e_shop_backend.service.CustomUserDetailsService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -18,29 +18,78 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-/**
- * Spring Security configuration for the E-Shop backend.
- * Configures security filters, authorization rules, and CORS.
- */
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity // Enables @PreAuthorize, @PostAuthorize, @Secured annotations
+@EnableMethodSecurity // Enables @PreAuthorize
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final CustomUserDetailsService customUserDetailsService;
 
-    public SecurityConfig(
-            JwtAuthenticationFilter jwtAuthFilter,
-            CustomUserDetailsService customUserDetailsService) {
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter, CustomUserDetailsService customUserDetailsService) {
         this.jwtAuthFilter = jwtAuthFilter;
         this.customUserDetailsService = customUserDetailsService;
+    }
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+            .csrf(AbstractHttpConfigurer::disable) // Disable CSRF for API endpoints
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Enable CORS
+            .authorizeHttpRequests(authorize -> authorize
+                // --- Public Endpoints (accessible without authentication) ---
+
+                // Allow all static resources (CSS, JS, images, HTML pages)
+                .requestMatchers(
+                    "/", // Root path (index.html if mapped)
+                    "/index.html",
+                    "/login.html",
+                    "/register.html",
+                    "/products.html",
+                    "/cart.html",
+                    "/admin.html",
+                    "/users.html",
+                    "/css/**",
+                    "/js/**",
+                    "/images/**",
+                    "/favicon.ico"
+                ).permitAll()
+
+                // Allow authentication API endpoints (login, register)
+                .requestMatchers("/api/auth/**").permitAll()
+
+                // Allow GET requests to products and categories API endpoints (publicly viewable)
+                // IMPORTANT: Ensure these are specific and come BEFORE any general authenticated() rule
+                .requestMatchers(HttpMethod.GET, "/api/products", "/api/products/**").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/categories").permitAll()
+
+                // --- Authenticated Endpoints (require JWT token) ---
+
+                // User-specific API endpoints (require authentication and ROLE_USER)
+                .requestMatchers("/api/cart/**").hasRole("USER") // Cart operations require user role
+                .requestMatchers("/api/orders/**").hasRole("USER") // Order operations require user role
+
+                // Admin-specific API endpoints (require authentication and ROLE_ADMIN)
+                .requestMatchers("/api/users/**").hasRole("ADMIN") // User management API
+                // Add other admin-specific APIs here: .requestMatchers("/api/admin/**").hasRole("ADMIN")
+
+                // Any other request not explicitly permitted or role-based requires authentication
+                .anyRequest().authenticated()
+            )
+            .sessionManagement(session -> session
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // Use stateless sessions for JWT
+            )
+            .authenticationProvider(authenticationProvider())
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
     }
 
     @Bean
@@ -49,57 +98,7 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(AbstractHttpConfigurer::disable) // Disable CSRF for stateless API (JWT)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Configure CORS
-                .authorizeHttpRequests(authorize -> authorize
-                        // --- 1. Permit ALL static resources and common HTML pages FIRST ---
-                        .requestMatchers(
-                                "/",
-                                "/*.html",
-                                "/*.ico", "/*.png", "/*.jpg", "/*.jpeg", "/*.gif", "/*.svg",
-                                "/*.css", "/*.js",
-                                "/css/**", "/js/**", "/images/**", "/fonts/**", "/webjars/**",
-                                "/admin/*.html",
-                                "/error")
-                        .permitAll()
-
-                        // --- 2. Public API Endpoints (no authentication required) ---
-                        .requestMatchers(
-                                "/api/auth/login",
-                                "/api/auth/register",
-                                "/api/products/**", // Public product browsing and details
-                                "/api/categories/**", // Public category listing
-                                "/api/reviews/**", // Public reviews (if any)
-                                "/api/public/**" // Any other explicitly public API paths
-                        ).permitAll()
-
-                        // --- 3. Protected API Endpoints requiring specific roles (e.g., ADMIN) ---
-                        .requestMatchers("/api/auth/admin/validate").hasRole("ADMIN")
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        .requestMatchers("/api/roles").hasRole("ADMIN")
-
-                        // --- 4. All /api/cart/** endpoints require authentication (any authenticated
-                        // user) ---
-                        // This must come AFTER permitAll() rules and BEFORE
-                        // .anyRequest().authenticated()
-                        .requestMatchers("/api/cart/**").authenticated() // All cart operations require login
-
-                        // --- 5. Any other request not matched by the above rules requires
-                        // authentication ---
-                        .anyRequest().authenticated())
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // Use stateless sessions for JWT
-                )
-                .authenticationProvider(authenticationProvider())
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
-        return http.build();
-    }
-
-    @Bean
-    public AuthenticationProvider authenticationProvider() {
+    public DaoAuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(customUserDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder());
@@ -112,15 +111,20 @@ public class SecurityConfig {
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:8080"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-
+        // Allow requests from your frontend's domain (localhost:5500 for dev, Netlify URL for prod)
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:8080", // If you also run frontend from 8080
+            "http://127.0.0.1:8080",
+            "http://localhost:5500" // Add this for your current frontend testing
+            // Add your Netlify URL here when your frontend is deployed, e.g., "https://your-netlify-app-url.netlify.app"
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
+        configuration.setAllowCredentials(true); // Allow cookies, authorization headers, etc.
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // Apply CORS to all paths
         return source;
     }
 }
